--- a/assets/styles/index/main.css
+++ b/assets/styles/index/main.css
@@ -12,8 +12,30 @@
     top: 50%;
     left: 50%;
     position: fixed;
-    gap: 0.625rem;
+    gap: 1.625rem;
     width: 50rem;
+}
+#main > .player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 5rem;
+    gap: 1.3rem;
+}
+#main > .player > .caption {
+    font-weight: 800;
+}
+#main > .player > .button {
+    background-color: #ffffff;
+    border: 0.125rem solid #e0e0e0;
+    cursor: pointer;
+    padding: 1rem;
+    font-size: 1rem;
+    border-radius: 1.25rem;
+}
+#main > .player > .button:hover {
+    border: 0.125rem solid #9e9e9e;
 }
 
 #main > .voice-box {
@@ -59,7 +81,7 @@
     flex-direction: row;
     align-items: stretch;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 5rem;
 }
 #main > .voice-box > .voice-category > .category  > .label {
     display: flex;
@@ -123,6 +145,6 @@
     font-weight: 500;
 }
 #main > .voice-box > .text > .label > .input:focus {
-    border: 0.1rem solid #9e9e9e;
+    border: 0.2rem solid #9e9e9e;
 
 }
